AM_LDFLAGS =
AM_CFLAGS = -O2 -Wall -DNDEBUG

bin_PROGRAMS = contour_next

contour_next_SOURCES  = contour.c
contour_next_SOURCES += ../astm/astm-1381-95.c
contour_next_SOURCES += ../astm/astm-1394-91.c
contour_next_SOURCES += ../utils/log/log.c
contour_next_SOURCES += ../simple_protocol/simple_protocol.c
